--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.11.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "@types/react-redux": "^7.1.24",
     "antd": "^4.20.4",
     "axios": "^0.27.2",
     "lodash": "^4.17.21",
@@ -20,7 +21,7 @@
     "react-router-dom": "^6.3.0",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "5.0.1",
-    "redux": "^4.2.0",
+    "redux": "^4.1.10",
     "redux-actions": "^2.6.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
